fix 'read more' arrow vertical alignment

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -752,7 +752,7 @@ h2.conference-emphasis {
 
 .read-more {
 	background-image: url('../img/read-more-arrow.png');
-	background-position: center;
+	background-position: center 2px !important;
 	background-repeat: no-repeat;
 	background-size: 100%;
 	display: inline-block;
